--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
@@ -271,7 +271,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9aX-JM-OL4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1077" y="-87"/>
+            <point key="canvasLocation" x="1109" y="-101"/>
         </scene>
         <!--View Controller - You-->
         <scene sceneID="XLP-Mv-eOZ">
@@ -428,7 +428,7 @@
                     <connections>
                         <outlet property="password" destination="dQ3-TL-QJV" id="2eS-4y-dpO"/>
                         <outlet property="username" destination="5cJ-Pr-JDX" id="DAz-yW-ZZb"/>
-                        <segue destination="7qc-hS-fop" kind="modal" identifier="login" modalTransitionStyle="crossDissolve" id="AXN-iT-xrz"/>
+                        <segue destination="7qc-hS-fop" kind="modal" identifier="attemptLogin" modalTransitionStyle="crossDissolve" id="AXN-iT-xrz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3t3-pM-kha" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -836,7 +836,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginSelectionController.h"/>
             <relationships>
                 <relationship kind="action" name="getTweets:"/>
-                <relationship kind="action" name="loginNormally:"/>
                 <relationship kind="action" name="loginWithFacebook:"/>
                 <relationship kind="outlet" name="logo" candidateClass="UIImageView"/>
             </relationships>
@@ -874,6 +873,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="4QX-vD-XO7"/>
+        <segue reference="iZh-fC-kri"/>
     </inferredMetricsTieBreakers>
 </document>
